{{$NEXT}}

0.33     2017-01-24

- Fixed a mistake in the SYNOPSIS for Specio::Declare. The example for the
  *_isa_type helpers was not correct.

- Removed the alpha warning from the docs. This is being used by enough of my
  modules on CPAN that I don't plan on doing any big breaking changes without
  a deprecation first.


0.32     2017-01-12

- Fixed a bug in the inlining for types create by any_can_type() and
  object_can_type(). This inlining mostly worked by accident because of some
  List::Util XS magic, but this broke under the debugger. Reported by
  Christian Walde (GH #6) and Chan Wilson
  (https://github.com/houseabsolute/DateTime.pm/issues/49).


0.31     2016-11-05

- The stack trace contained by Specio::Exception objects no longer includes a
  stack frames for the Specio::Exception package.

- Made the inline_environment() and description() methods public on type and
  coercion objects.


0.30     2016-10-15

- Fix a bug with the Sub::Quoted sub returned by $type->coercion_sub. If a
  type had more than one coercion, the generated sub could end up coercing the
  value to undef some of the time. Depending on hash key ordering, this could
  end up being a heisenbug that only occured some of the time.


0.29     2016-10-09

- Doc Specio::PartialDump because you may want to use it as part of the
  failure message generation code for a type.


0.28     2016-10-02

- Added a Test::Specio module to provide helpers for testing Specio libraries.

- Fixed another bug with a subtype of special types and inlining.


0.27     2016-10-01

- Cloning a type with coercions defined on it would cause an exception.

- Creating a subtype of a special type created by *_isa_type, *_can_type, or
  *_does_type, or enum would die when trying to inline the type constraint.

- Removed the never-documented Any type.

- Added documentation for each type in Specio::Library::Builtins.


0.26     2016-09-24

- Require Role::Tiny 1.003003. This should fix the test failures some